2020-06-29  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/GNUmakefile: Specify dependent libraries
	while linking regardless of the target OS.

2018-03-20  Graham Lee  <graham@iamleeg.com>

	* Documentation/HowTo.txt: Document methods that still exist.

	* Frameworks/StepTalk/STEngine.m (engineForLanguageWithName:):
	* Languages/Smalltalk/SmalltalkEngine.m (multiple methods):
	Correct spelling of 'deprecated' in log messages.

2018-02-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STObjCRuntime.m (selector_types): Fix for
	generation of selector types on 64-bit architectures.

2017-12-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STEnvironmentDescription.m
	(defaultDescriptionName): Remove redundant method call.

	* Frameworks/StepTalk/STBundleInfo.m (allFrameworkNames,
	pathForFrameworkWithName:):
	* Tools/STExecutor.m (executeScript:withArguments:): Use NULL
	instead of NO where a pointer argument is expected.

	* Frameworks/StepTalk/STConversation.m (knownLanguages,
	interpretScript:):
	* Frameworks/StepTalk/STRemoteConversation.m (interpretScript:):
	* Frameworks/StepTalk/STUndefinedObject.m (release):
	Fix inconsistent distributed object modifiers reported by clang.

2015-10-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STObjCRuntime.m (selector_types): Fix broken
	array initialization, which meant that incorrect method signatures
	were generated for methods with more than four arguments.

2014-11-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STRemoteConversation.m
	(-initWithEnvironmentName:host:language:, -open,
	-setLanguage:, -language): Correctly initialize the scripting
	language used in a remote conversation.

2014-11-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STRemoteConversation.m (-open): Force use of
	a socket port name server to look up servers on other hosts.

2014-11-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
