@@ -1,0 +1,34 @@
+/**
+    NSValue-additions.h
+    Various methods for NSValue to deal with pointers
+
+    Copyright (c) 2022 Free Software Foundation
+
+    This file is part of the StepTalk project.
+
+    This library is free software; you can redistribute it and/or
+    modify it under the terms of the GNU Lesser General Public
+    License as published by the Free Software Foundation; either
+    version 2 of the License, or (at your option) any later version.
+
+    This library is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+    Lesser General Public License for more details.
+
+    You should have received a copy of the GNU Lesser General Public
+    License along with this library; if not, write to the Free Software
+    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+ */
+
+#import <Foundation/NSValue.h>
+
+@interface NSValue(STPointerAdditions)
++ valueWithPointer:(void *)pointer objCType:(const char *)type;
+- valueWithObjCType:(const char *)type;
+- (void *)pointerValueWithIndex:(NSInteger)index;
+- valueWithPointerAtIndex:(NSInteger)index;
+- valueAtIndex:(NSInteger)index;
+- (void)setValue:anObject atIndex:(NSInteger)index;
+@end
