@@ -1,3 +1,11 @@
+2022-04-19  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/NSValue+additions.h:
+	* Frameworks/StepTalk/NSValue+additions.m:
+	* Frameworks/StepTalk/GNUmakefile:
+	Add methods to NSValue to read and update datareferenced through a
+	non-object pointer.
+
 2020-06-29  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/GNUmakefile: Specify dependent libraries
